SUBDIRS = gst-libs gst

EXTRA_DIST = autogen.sh \
	     nemo-gstreamer-interfaces-0.10.pc.in \
	     nemo-gstreamer-interfaces-0.10.pc \
	     libgstnativebuffer.pc.in \
	     libgstnativebuffer.pc \
	     libgstgralloc.pc.in \
	     libgstgralloc.pc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = nemo-gstreamer-interfaces-0.10.pc \
		 libgstnativebuffer.pc \
		 libgstgralloc.pc
