lib_LTLIBRARIES = libgstanativewindowbuffer-@GST_API_VERSION@.la

libgstanativewindowbuffer_@GST_API_VERSION@_la_SOURCES = gstanativewindowbufferpool.c

libgstanativewindowbuffer_@GST_API_VERSION@_la_CFLAGS = \
				$(DROID_CFLAGS) \
				$(GST_CFLAGS)

libgstanativewindowbuffer_@GST_API_VERSION@_la_LIBTOOLFLAGS = --tag=disable-static

libgstanativewindowbuffer_@GST_API_VERSION@includedir = $(includedir)/gstreamer-@GST_API_VERSION@/gst/anativewindowbuffer
libgstanativewindowbuffer_@GST_API_VERSION@include_HEADERS = gstanativewindowbufferpool.h
