lib_LTLIBRARIES = libgstnemointerface-@GST_MAJORMINOR@.la
libgstnemointerfaceincludedir = \
        $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/interfaces

libgstnemointerfaceinclude_HEADERS = nemovideotexture.h
libgstnemointerface_@GST_MAJORMINOR@_la_SOURCES = nemovideotexture.c
libgstnemointerface_@GST_MAJORMINOR@_la_CFLAGS = $(GST_CFLAGS)
libgstnemointerface_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS)
libgstnemointerface_@GST_MAJORMINOR@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_LT_LDFLAGS)
